ingress/svclient.yaml
apiVersion: v1
kind: Service
metadata:
  name: svclient
  labels:
    app.kubernetes.io/name: vendorlist
    app.kubernetes.io/component: vl-pod
    app.kubernetes.io/service: vlclient
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: vlclient-pod
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3002
