ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vling
  # annotations:
  #   # # If the class annotation is not specified it defaults to "gce".
  #   # ingressClassName: "gce"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: vling.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svclient
            port:
              number: 8080


  # defaultBackend:
  #   service:
  #     name: svclient
  #     port:
  #       number: 8080
